tests/type-check/bad/bad-make.arr

a = {
    make: lam(b :: Number):
        b
    end
}

c = [a: 1, 2, 3, 4]
